--- a/src/index.css
+++ b/src/index.css
@@ -14343,6 +14343,172 @@ video {
   transition-delay: 1000ms;
 }
 
+html {
+  height: 100%;
+  margin: 0 auto;
+  padding: 0;
+}
+
+body {
+  text-align: center;
+  color: white;
+  margin: 0 auto;
+  overflow-x: hidden;
+  height: 100%;
+  background: #f2f2f2;
+}
+
+img {
+  max-width: 100%;
+}
+
+h1 {
+  font-size: 36px;
+  margin: 0px auto 10px auto;
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 28px;
+  line-height: 1.4;
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  padding: 0px 0px;
+  margin: 0px auto 25px auto;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.6;
+  color: #fff;
+  font-family: "Merriweather", serif;
+  font-weight: 300;
+  color: #414141;
+  margin: 0;
+}
+
+.main {
+  height: 100vh;
+  min-height: 100%;
+  max-width: 100%;
+  overflow: hidden;
+  background-size: cover;
+  background-image: url(https://images.unsplash.com/photo-1453959022778-cfda85dbe0f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80)
+}
+
+.text-wrapper {
+  width: 600px;
+  max-width: 94%;
+  position: absolute;
+  bottom: 100px;
+  right: 0;
+  left: 0;
+  overflow: auto;
+  margin: auto;
+  text-align: left;
+  animation: fadeInUpward 1s;
+  -moz-animation: fadeInUpward 1s;
+  -o-animation: fadeInUpward 1s;
+}
+
+#avy {
+  margin-bottom: 16px;
+  width: 72px;
+  height: 72px;
+  border-radius: 36px;
+  -khtml-border-radius: 36px;
+  -webkit-appearance: none;
+}
+
+.social {
+  background: #000;
+  padding: 10px 12px;
+  border-radius: 20px;
+  -khtml-border-radius: 20px;
+  -webkit-appearance: none;
+  box-sizing: border-box;
+  margin: 2px;
+  cursor: pointer;
+  cursor: hand;
+  opacity: 0.65;
+  display: inline-block;
+}
+
+.social:hover {
+  opacity: 1;
+}
+
+#link,
+#link:visited {
+  color: #fff;
+  opacity: 0.65;
+  text-decoration: none;
+  border-bottom: 2px solid #fff;
+}
+
+#link:hover {
+  color: #fff;
+  opacity: 1;
+}
+
+#tweetbtn {
+  background: #00aced;
+}
+
+#dribbblebtn {
+  background: #ea4c89;
+}
+
+#instagrambtn {
+  background: #517fa4;
+}
+
+#creativemarketbtn {
+  background: #8aa554;
+}
+
+#blogbtn {
+  background: #ffba89;
+}
+
+#mailbtn {
+  background: #d23028;
+}
+
+.fa {
+  color: #fff;
+}
+
+@keyframes fadeInUpward {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@media (max-width: 768px) {
+  .aligndiv {
+    bottom: 50px;
+    left: 16px;
+  }
+
+  h1 {
+    font-size: 24px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:space-y-0 > :not(template) ~ :not(template) {
     --space-y-reverse: 0;
