--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,3 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-
 html {
   height: 100%;
   margin: 0 auto;
@@ -50,15 +46,24 @@ p {
 }
 
 .main {
-  height: 100vh;
+  height: auto !important;
   min-height: 100%;
+  height: 100%;
   max-width: 100%;
+  margin: 0 auto;
+  position: relative;
+  display: block;
   overflow: hidden;
+  background: #404040
+    url(https://s3.amazonaws.com/ooomf-com-files/wdXqHcTwSTmLuKOGz92L_Landscape.jpg)
+    no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-image: url(https://images.unsplash.com/photo-1453959022778-cfda85dbe0f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80)
 }
 
-.text-wrapper {
+.aligndiv {
   width: 600px;
   max-width: 94%;
   position: absolute;
