--- a/src/style.scss
+++ b/src/style.scss
@@ -3,143 +3,127 @@
 @import "tailwindcss/utilities";
 
 html {
-  height: 100%;
-  margin: 0 auto;
-  padding: 0;
+  @apply .h-full
+  .my-0
+  .mx-auto
+  .p-0;
 }
 
 body {
-  text-align: center;
-  color: white;
-  margin: 0 auto;
-  overflow-x: hidden;
-  height: 100%;
-  background: #f2f2f2;
+  @apply .text-center
+  .text-white
+  .my-0
+  .mx-auto
+  .overflow-x-hidden
+  .h-full
+  .bg-gray-200;
 }
 
 img {
-  max-width: 100%;
+  @apply .min-h-full;
 }
 
 h1 {
-  font-size: 36px;
-  margin: 0px auto 10px auto;
-  color: #fff;
   font-family: "Lato", sans-serif;
-  font-weight: 700;
+
+  @apply .font-bold
+  .mt-0
+  .mr-auto
+  .mb-2
+  .ml-auto
+  .text-2xl;
+
+  @screen md {
+    @apply .text-4xl;
+  }
 }
 
 h2 {
-  font-size: 28px;
-  line-height: 1.4;
-  color: #fff;
   font-family: "Lato", sans-serif;
-  font-weight: 300;
-  padding: 0px 0px;
-  margin: 0px auto 25px auto;
+
+  @apply .font-light
+  .leading-snug
+  .text-lg
+  .p-0
+  .mt-0
+  .mr-auto
+  .mb-4
+  .ml-auto;
+
+  @screen md {
+    @apply .text-2xl;
+  }
 }
 
 p {
-  font-size: 18px;
-  line-height: 1.6;
-  color: #fff;
   font-family: "Merriweather", serif;
-  font-weight: 300;
   color: #414141;
-  margin: 0;
+
+  @apply .text-lg
+  .leading-relaxed
+  .text-white
+  .font-light
+  .m-0;
 }
 
 .main {
-  height: 100vh;
-  min-height: 100%;
-  max-width: 100%;
-  overflow: hidden;
-  background-size: cover;
-  background-image: url(https://images.unsplash.com/photo-1453959022778-cfda85dbe0f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80)
+  @apply .h-screen
+  .min-h-full
+  .max-w-full
+  .overflow-hidden
+  .bg-cover;
+  background-image: url("https://images.unsplash.com/photo-1453959022778-cfda85dbe0f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
 }
 
 .text-wrapper {
-  width: 600px;
-  max-width: 94%;
+  bottom: 50px;
+  left: 16px;
   position: absolute;
-  bottom: 100px;
   right: 0;
-  left: 0;
-  overflow: auto;
-  margin: auto;
-  text-align: left;
-  -webkit-animation: fadeInUpward 1s;
+
+  @apply .overflow-hidden
+  .m-auto
+  .text-white
+  .w-11/12
+  .text-left;
+
+  @screen md {
+    @apply .w-2/3;
+    bottom: 100px;
+    left: 0;
+  }
+}
+
+.fade-in-upward {
   animation: fadeInUpward 1s;
-  -moz-animation: fadeInUpward 1s;
-  -o-animation: fadeInUpward 1s;
 }
 
 #avy {
-  margin-bottom: 16px;
-  width: 72px;
-  height: 72px;
-  -moz-border-radius: 36px;
-  -webkit-border-radius: 36px;
-  border-radius: 36px;
-  -khtml-border-radius: 36px;
-  -webkit-appearance: none;
+  @apply .mb-4
+  .rounded-full
+  .h-24
+  .w-24;
 }
 
 .social {
-  background: #000;
-  padding: 10px 12px;
-  -moz-border-radius: 20px;
-  -webkit-border-radius: 20px;
-  border-radius: 20px;
-  -khtml-border-radius: 20px;
-  -webkit-appearance: none;
-  box-sizing: border-box;
-  margin: 2px;
-  cursor: pointer;
-  cursor: hand;
-  opacity: 0.65;
-  display: inline-block;
+  @apply .bg-black
+  .py-1
+  .px-2
+  .rounded-full
+  .box-border
+  .m-1
+  .cursor-pointer
+  .opacity-75
+  .inline-block;
 }
 
 .social:hover {
   opacity: 1;
 }
 
-#link,
-#link:visited {
-  color: #fff;
-  opacity: 0.65;
-  text-decoration: none;
-  border-bottom: 2px solid #fff;
-}
-
 #link:hover {
   color: #fff;
   opacity: 1;
-}
-
-#tweetbtn {
-  background: #00aced;
-}
-
-#dribbblebtn {
-  background: #ea4c89;
-}
-
-#instagrambtn {
-  background: #517fa4;
-}
-
-#creativemarketbtn {
-  background: #8aa554;
-}
-
-#blogbtn {
-  background: #ffba89;
-}
-
-#mailbtn {
-  background: #d23028;
 }
 
 .fa {
@@ -173,20 +157,5 @@ p {
     -webkit-transform: translateY(0);
     -ms-transform: translateY(0);
     transform: translateY(0);
-  }
-}
-
-@media (max-width: 768px) {
-  .aligndiv {
-    bottom: 50px;
-    left: 16px;
-  }
-
-  h1 {
-    font-size: 24px;
-  }
-
-  h2 {
-    font-size: 18px;
   }
 }
