--- a/src/index.scss
+++ b/src/index.scss
@@ -14418,7 +14418,7 @@ p {
   max-width: 100%;
   overflow: hidden;
   background-size: cover;
-  background-image: url("https://images.unsplash.com/photo-1453959022778-cfda85dbe0f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+  background-image: url("/nhbackground.jpg");
 }
 
 .text-wrapper {
