--- a/src/style.scss
+++ b/src/style.scss
@@ -72,7 +72,7 @@ p {
   .max-w-full
   .overflow-hidden
   .bg-cover;
-  background-image: url("https://images.unsplash.com/photo-1453959022778-cfda85dbe0f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+  background-image: url("/nhbackground.jpg");
 }
 
 .text-wrapper {
