Update copy and organize components into modules
I'm generally more comfortable with the module structure in React. This
allows me to have a folder containing the component, any relevant tests,
files for constants, stylesheets, etc.

--- a/src/index.scss
+++ b/src/index.scss
@@ -14440,6 +14440,14 @@ p {
 
     left: 0;
   }
+  .text {
+    --bg-opacity: 1;
+    background-color: #2d3748;
+    background-color: rgba(45, 55, 72, var(--bg-opacity));
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    --bg-opacity: 0.25;
+  }
 }
 
 .fade-in-upward {
