Add and configure gh-pages
This change follows a [great tutorial][tut] from on how to deploy an app
built with Create React App to GitHub pages. The only changes here had
to do with images, namely moving all images (the NH background and my
headshot) into a new src/images directory.

[tut]:https://dev.to/yuribenjamin/how-to-deploy-react-app-in-github-pages-2a1f

--- a/src/style.scss
+++ b/src/style.scss
@@ -119,7 +119,7 @@ p {
   .max-w-full
   .overflow-hidden
   .bg-cover;
-  background-image: url("/nhbackground.jpg");
+  background-image: url("images/nhbackground.jpg");
 }
 
 .text-wrapper {
