--- a/src/index.scss
+++ b/src/index.scss
@@ -14457,7 +14457,7 @@ p {
   max-width: 100%;
   overflow: hidden;
   background-size: cover;
-  background-image: url("/nhbackground.jpg");
+  background-image: url("images/nhbackground.jpg");
 }
 
 .text-wrapper {
