--- a/src/index.scss
+++ b/src/index.scss
@@ -14367,6 +14367,7 @@ body {
   margin-right: auto;
   overflow-x: hidden;
   height: 100%;
+  background-size: cover;
   --bg-opacity: 1;
   background-color: #edf2f7;
   background-color: rgba(237, 242, 247, var(--bg-opacity));
@@ -14456,13 +14457,24 @@ p {
   min-height: 100%;
   max-width: 100%;
   overflow: hidden;
+  background-position: top;
   background-size: cover;
-  background-image: url("images/nhbackground.jpg");
+  background-image: url("images/nhbackground-min.jpg");
+  .background-image {
+    object-fit: cover;
+    transition: opacity 1s ease-in-out;
+  }
+  .loading {
+    opacity: 0;
+  }
+  .loaded {
+    opacity: 1;
+  }
 }
 
 .text-wrapper {
-  bottom: 50px;
-  left: 16px;
+  bottom: 5px;
+  left: 0px;
   position: absolute;
   right: 0;
   overflow: hidden;
@@ -14474,14 +14486,17 @@ p {
   width: 91.666667%;
   text-align: left;
   @media (min-width: 768px) {
-    width: 33.333333%;
+    width: 60%;
 
-    bottom: 100px;
+    bottom: 80px;
 
     left: 0;
   }
+  @media (min-width: 1024px) {
+    width: 25%;
+  }
   .text {
-    background: linear-gradient(55deg, rgba($void, 0.8), rgba($void, 0.4));
+    background: linear-gradient(55deg, rgba($void, 0.9), rgba($void, 0.3));
     border-radius: 0.25rem;
     padding: 0.5rem;
     --bg-opacity: 0.25;
@@ -14516,7 +14531,7 @@ p {
 }
 
 .headshot-wrapper:focus {
-  box-shadow: 0px 0px 9px 4px $void;
+  box-shadow: 0px 0px 4px 4px $void;
   outline: 0;
   border-radius: 9999px;
 }
