--- a/src/style.scss
+++ b/src/style.scss
@@ -19,6 +19,7 @@ body {
   .mx-auto
   .overflow-x-hidden
   .h-full
+  .bg-cover
   .bg-gray-200;
 }
 
@@ -118,13 +119,28 @@ p {
   .min-h-full
   .max-w-full
   .overflow-hidden
+  .bg-top
   .bg-cover;
-  background-image: url("images/nhbackground.jpg");
+
+  background-image: url("images/nhbackground-min.jpg");
+
+  .background-image {
+    @apply .object-cover;
+    transition: opacity 1s ease-in-out;
+  }
+
+  .loading {
+    @apply .opacity-0;
+  }
+
+  .loaded {
+    @apply .opacity-100;
+  }
 }
 
 .text-wrapper {
-  bottom: 50px;
-  left: 16px;
+  bottom: 5px;
+  left: 0px;
   position: absolute;
   right: 0;
 
@@ -136,13 +152,17 @@ p {
   .text-left;
 
   @screen md {
-    @apply .w-1/3;
-    bottom: 100px;
+    @apply .w-3/5;
+    bottom: 80px;
     left: 0;
   }
 
+  @screen lg {
+    @apply .w-1/4;
+  }
+
   .text {
-    background: linear-gradient(55deg, rgba($void, 0.8), rgba($void, 0.4));
+    background: linear-gradient(55deg, rgba($void, 0.9), rgba($void, 0.3));
 
     @apply .rounded
     .p-2
@@ -182,7 +202,7 @@ p {
 }
 
 .headshot-wrapper:focus {
-  box-shadow: 0px 0px 9px 4px $void;
+  box-shadow: 0px 0px 4px 4px $void;
   @apply .outline-none
   .rounded-full;
 }
